changed background of site

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         <meta property="og:url" content="http://startupuw.com" />
         <meta property="og:site_name" content="Startup UW" />
     </head>
+
     <body class="is-loading">
         <!-- Wrapper -->
+
+
         <div id="wrapper" class="fade-in">
+          <center><img class ="head-image" src="images/full-logo.png"></img></center>
             <!-- Intro -->
             <div id="intro">
                 <h1>We are creators</h1>
