added more team profiles

--- a/team.html
+++ b/team.html
@@ -119,7 +119,7 @@
         <article>
           <header>
             <div class="profile-avatar overlay">
-              <img src="images/placeholder.jpg" alt="My Photo">
+              <img src="images/connor.jpg" alt="My Photo">
             </div>
             <h2>Connor Carlson</h2>
             <h3>
@@ -127,7 +127,7 @@
             </h3>
           </header>
           <p>
-            Bio coming soon.
+            Connor is a sophomore from Auburn, Washington and is currently majoring in Computer science with a minor in Informatics and Entrepreneurship. Connor is interested in the intersection and relation of business, design, and technology and joined Startup UW to help others explore that relation.
           </p>
           <ul class="icons alt">
             <li>
@@ -164,7 +164,9 @@
             </h3>
           </header>
           <p>
-            Bio coming soon.
+            Pavan is from Panama City, Panama and is a sophomore who is intending to Major in Finance. He enjoys watching TV shows, playing pick up
+            sports, and he also heavily follows professional sports. He joined Startup UW to make sure that the entrepreneurs at our school had access to the amizing resources of Startup UW and were
+            able to attend events that gave them the chance to meet future partners and to build skills that would help them better run their future businesses.
           </p>
           <ul class="icons alt">
           </ul>
@@ -194,7 +196,9 @@
               <span>VP of Partnerships</span>
             </h3>
           </header>
-          <p>Bio Comming soon.
+          <p>
+            David is from Hood River, Oregon and is majoring in Industrial Engineering. He is an outdoor enthusiast and spends his free time outdoors and traveling. He hopes to combine entrepreneurship with his love for outdoor sports
+            and travel. He joined Startup UW becuase he is obsessed with entrepreneurship. Whether you're trying to launch your own startup or build a successful small business model, he wants to equip you with the entrepreneurship community at UW to support it.
           </p>
 
         </article>
@@ -251,6 +255,20 @@
             </h3>
           </header>
           <p>Bio coming soon.
+          </p>
+        </article>
+        <article>
+          <header>
+            <div class="profile-avatar overlay">
+              <img src="images/colin.jpg" alt="My Photo">
+            </div>
+            <h2>Colin James</h2>
+            <h3>
+              <span>VP of Sponsorships</span>
+            </h3>
+          </header>
+          <p>
+            Colin is from Sammamish Washington, studying business. His hobbies include skiing, listening to music including going to concerts, and long boarding.
           </p>
         </article>
         <article>
