updated events and profiles

--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -142,22 +142,6 @@
             <div class="profile-avatar overlay">
               <img src="images/placeholder.jpg" alt="My Photo">
             </div>
-            <h2>Tyler Richard</h2>
-            <h3>
-              <span>VP of Marketing</span>
-            </h3>
-          </header>
-          <p>
-            Bio coming soon.
-          </p>
-          <ul class="icons alt">
-          </ul>
-        </article>
-        <article>
-          <header>
-            <div class="profile-avatar overlay">
-              <img src="images/placeholder.jpg" alt="My Photo">
-            </div>
             <h2>Pavan Balani</h2>
             <h3>
               <span>VP of Marketing</span>
@@ -170,21 +154,6 @@
           </p>
           <ul class="icons alt">
           </ul>
-        </article>
-        <article>
-          <header>
-            <div class="profile-avatar overlay">
-              <img src="images/ahlaahm.jpg" alt="My Photo">
-            </div>
-            <h2>Ahlaahm Ibraahim</h2>
-            <h3>
-              <span>VP of Event Programming</span>
-            </h3>
-          </header>
-          <p>
-            Ahlaam Ibraahim is a student at the University of Washington! Ahlaam enjoys keeping up with the latest technology, non-profits changing the world and gluten-free brands. She’s also passionate about startups and homes to have her own one
-            day.
-          </p>
         </article>
         <article>
           <header>
@@ -247,19 +216,6 @@
         <article>
           <header>
             <div class="profile-avatar overlay">
-              <img src="images/placeholder.jpg" alt="My Photo">
-            </div>
-            <h2>Jeff Menaker</h2>
-            <h3>
-              <span>VP of Finance</span>
-            </h3>
-          </header>
-          <p>Bio coming soon.
-          </p>
-        </article>
-        <article>
-          <header>
-            <div class="profile-avatar overlay">
               <img src="images/colin.jpg" alt="My Photo">
             </div>
             <h2>Colin James</h2>
@@ -271,6 +227,23 @@
             Colin is from Sammamish Washington, studying business. His hobbies include skiing, listening to music including going to concerts, and long boarding.
           </p>
         </article>
+          <article>
+              <header>
+                  <div class="profile-avatar overlay">
+                      <img src="images/Aaron.jpg" alt="My Photo">
+                  </div>
+                  <h2>Aaron Chen</h2>
+                  <h3>
+                      <span>Freshman Representative</span>
+                  </h3>
+              </header>
+              <p>
+                  Aaron is a freshman who is intending to major in Computer Science.
+                  He has been interested in entrepreneurship ever since he got into coding.
+                  His hobbies include reading, playing basketball, and hanging out with friends.
+                  Currently, Aaron has interned in 2 local startups in the Seattle area as a software engineer.
+              </p>
+          </article>
         <article>
           <header>
             <div class="profile-avatar overlay">
